<resources>
    <string name="app_name">UBed HTAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="or">OR</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>

    <!-- Strings related to signup -->
    <string name="prompt_name">Name</string>
    <string name="prompt_ic">No. IC</string>
    <string name="prompt_tel_number">Telephone Number</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--WelcomeActivity-->
    <string name="welcome_ubed">Welcome to UBed HTAR</string>
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Register</string>

    <string name="login_description">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <!--BaseActivity-->
    <string name="register_description">Register as Patient</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bed">UBed</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_review">Review</string>

    <!--HomeFragment-->
    <string name="home_bed">UBed</string>
    <string name="home_appointment">Appointment</string>
    <string name="home_about_us">About Us</string>
    <string name="home_feedback">Feedback</string>
    <string name="home_signout">Sign Out</string>
    <string name="home_contact">Contact Us</string>
    <string name="home_welcome">Welcome to UBed HTAR</string>
    <string name="home_bed_num">Bed left \n (Ward O&amp;G)</string>
    <string name="home_app_num">Appointment taken</string>


    <!--Bed-form-->
    <string name="bed_form_description">Bed booking</string>
    <string name="bed_form_patient_id">Patient ID</string>
    <string name="bed_form_specialist">Specialist</string>
    <string name="bed_form_date">Select date</string>
    <string name="bed_form_time">Select time</string>
    <string name="bed_form_note">Note</string>
    <string name="bed_form_btn">book</string>
    <string name="bed_no_booking">You have no booking yet</string>

    <!--Appointment-form-->
    <string name="appointment_description">Appointment</string>
    <string name="appointment_specialist">Specialist</string>
    <string name="appointment_doctor">Doctor</string>
    <string name="appointment_date">Select date</string>
    <string name="appointment_time">Select time</string>


    <!--specialists list-->
    <string name="specialist_prompt">Choose clinic</string>
    <string-array name="specialist_array">
        <!--<item>Paediatrics</item>-->
        <!--<item>Orthopaedics</item>-->
        <!--<item>Ear nose and throat (ENT)</item>-->
        <!--<item>Neurology</item>-->
        <!--<item>Nutrition and Dietetics</item>-->
        <item>Obstetrics and Gynecology</item>
    </string-array>

    <!--doctors list-->
    <string name="doctor_prompt">Choose doctor</string>
    <string-array name="doctor_array">
        <item>Dr. Ahmad Azmi</item>
        <item>Dr. Chan Yei Ling</item>
        <item>Datin Dr. Koshiela Parnamala</item>
        <item>Dr. Robenna Antony</item>
    </string-array>

    <string name="ward_prompt">Choose ward class</string>
    <string-array name="ward_array">
        <item>Class A (RM 300.00)</item>
        <item>Class B (RM 150.00)</item>
        <item>Class C (RM 90.00)</item>
    </string-array>

    <!--Feedback-->
    <string name="feedback_title">Enjoying UBed App?</string>
    <string name="feedback_rate">rate</string>
    <string name="feedback_review">write a review</string>
    <string name="feedback_btn">submit</string>

    <!--Signout-->
    <string name="signout_descr">Are you sure you want to sign out?</string>
    <string name="signout_btn">sign out</string>

    <!--action-->
    <string name="action_admin">Approve this booking?</string>
    <string name="action_discard">Discard</string>
    <string name="action_approve">Approve</string>
    <string name="action_reject">Reject</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_patient">Discard this booking?</string>

    <!--admin bed-->
    <string name="admin_bed_name">Bed Id</string>
    <string name="admin_bed_start">Start Date</string>
    <string name="admin_bed_end">End Date</string>

    <!--admin app-->
    <string name="admin_app_date">Date</string>
    <string name="admin_app_time">Time</string>

    <!--review fragment-->
    <string name="review_empty">No feedback</string>
    <string name="title_activity_contact_us">Contact Us</string>

    <!--contact us-->

    <!--about us-->
    <string name="about_us">Tengku Ampuan Rahimah Hospital (HTAR), Klang has been in operation since April 1985. It is a government hospital with more than 1000 patient beds and 20 clinical areas located in South Klang in the district of Klang, Selangor. The hospital provides major health services as well as the health care of selected national experts. The hospital is a major referral center for districts covering Klang, Sabak Bernam, Kuala Selangor and parts of Petaling and Kuala Langat.\n\nHTAR Klang Hospital also places medical instructional facilities for University of Malaya medical students and Management and Science University Malaysia (MSU).</string>


</resources>
