<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appointment_description"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specialist_prompt"
                style="@style/TextView.InputLabel"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/form_specialist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/specialist_array"
                android:prompt="@string/specialist_prompt"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:imeOptions="actionNext"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctor_prompt"
                style="@style/TextView.InputLabel"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/form_doctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/doctor_array"
                android:prompt="@string/doctor_prompt"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:imeOptions="actionNext"
                />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_date"
                android:ems="10"
                android:imeOptions="actionNext"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:focusableInTouchMode="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_time"
                android:ems="10"
                android:clickable="true"
                android:cursorVisible="false"
                android:imeOptions="actionNext"
                android:focusable="true"
                android:focusableInTouchMode="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bed_form_note"
                android:ems="10"
                android:gravity="start|top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/form_book_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/bed_form_btn"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/form_progressbar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/roundedbutton"
            android:visibility="gone"
            android:layout_marginTop="16dp">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="#fff"
                android:indeterminateTintMode="src_atop" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>