<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"/>

        <RatingBar
            android:id="@+id/feedback_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/feedback_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_review"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/feedback_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/feedback_btn"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/feedback_progressbar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/roundedbutton"
            android:visibility="gone"
            android:layout_marginTop="16dp">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="#fff"
                android:indeterminateTintMode="src_atop" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>